--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,12 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Josefin Sans;
+    font-weight: 400;
+}
+
+
 
 .header-top {
     width: 100%;
@@ -82,7 +88,7 @@
 } */
 
 .blog-image {
-    background-image: url(/assets/img/imageProxy\ \(1\).webp);
+    background-image: url(../img/imageProxy\ \(1\).webp);
     width: 100%;
     height: 100vh;
     /* background-attachment: scroll; */
@@ -97,7 +103,7 @@
 
 
 .blog-title {
-    width: 600px;
+    width: 630px;
     text-align: center;
 }
 
