--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -11,10 +11,10 @@ body {
 }
 
 
-.container{
+.blog-container{
     width: 1150px;
     margin: 50px auto;
-    padding: 50px 0px;
+    /* padding: 50px 0px; */
     display: flex;
     flex-direction: column;
     row-gap: 40px;
